take photos functionality test 1

--- a/Archigram/Base.lproj/Main.storyboard
+++ b/Archigram/Base.lproj/Main.storyboard
@@ -37,6 +37,9 @@
                                         <state key="normal" title="Take New Photo">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="camerabuttonaction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3WG-vj-tXR"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qPf-EZ-CB0">
                                         <rect key="frame" x="0.0" y="183" width="414" height="382"/>
@@ -53,7 +56,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="chooseFromLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nas-GD-2OM"/>
+                                            <action selector="photolibraryaction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="seg-3D-r3V"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lg6-dG-adf">
@@ -284,7 +287,7 @@
                                             <action selector="wikiButton:" destination="zZz-CP-At3" eventType="touchUpInside" id="bnC-r7-JhZ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mwW-eW-V59">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mwW-eW-V59">
                                         <rect key="frame" x="0.0" y="564" width="414" height="62"/>
                                         <color key="backgroundColor" red="0.42352941179999998" green="0.82745098039999998" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -300,11 +303,15 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="hSS-Xs-E6z" secondAttribute="trailing" constant="23" id="1le-7f-vMH"/>
                                     <constraint firstItem="HT2-x1-Vju" firstAttribute="top" secondItem="Hei-IL-r9M" secondAttribute="bottom" constant="12" id="2uM-NV-EZN"/>
+                                    <constraint firstAttribute="bottom" secondItem="mwW-eW-V59" secondAttribute="bottom" id="3cP-yQ-wJW"/>
                                     <constraint firstItem="Hei-IL-r9M" firstAttribute="top" secondItem="sbu-JG-hbN" secondAttribute="bottom" constant="18" id="4FW-mQ-Taj"/>
                                     <constraint firstItem="w81-9W-U6G" firstAttribute="trailing" secondItem="Dpb-ra-XAZ" secondAttribute="trailing" id="7YG-TC-98U"/>
                                     <constraint firstItem="sbu-JG-hbN" firstAttribute="top" secondItem="YuV-ks-YWL" secondAttribute="top" constant="56" id="CHs-Ug-LMG"/>
                                     <constraint firstAttribute="bottom" secondItem="Dpb-ra-XAZ" secondAttribute="bottom" constant="29" id="DvD-c8-eBU"/>
                                     <constraint firstItem="w81-9W-U6G" firstAttribute="centerX" secondItem="Dpb-ra-XAZ" secondAttribute="centerX" id="EAS-TG-LOI"/>
+                                    <constraint firstItem="mwW-eW-V59" firstAttribute="top" secondItem="w81-9W-U6G" secondAttribute="bottom" constant="33" id="FSm-so-fBn"/>
+                                    <constraint firstItem="mwW-eW-V59" firstAttribute="leading" secondItem="YuV-ks-YWL" secondAttribute="leading" id="FVz-6R-Mtm"/>
+                                    <constraint firstItem="mwW-eW-V59" firstAttribute="centerX" secondItem="w81-9W-U6G" secondAttribute="centerX" id="FxQ-ta-Y8f"/>
                                     <constraint firstItem="w81-9W-U6G" firstAttribute="top" secondItem="Dpb-ra-XAZ" secondAttribute="top" id="GUF-sx-dpb"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="leading" secondItem="YuV-ks-YWL" secondAttribute="leading" constant="21" id="I2V-83-rQ1"/>
                                     <constraint firstAttribute="trailing" secondItem="WiB-Rl-D4I" secondAttribute="trailing" constant="23" id="IX5-tg-NLL"/>
@@ -313,9 +320,7 @@
                                     <constraint firstItem="HT2-x1-Vju" firstAttribute="centerX" secondItem="YuV-ks-YWL" secondAttribute="centerX" id="QBT-yx-Zmj"/>
                                     <constraint firstItem="Hei-IL-r9M" firstAttribute="centerX" secondItem="YuV-ks-YWL" secondAttribute="centerX" id="SGj-pv-19b"/>
                                     <constraint firstItem="t6H-Q6-FNZ" firstAttribute="top" secondItem="YuV-ks-YWL" secondAttribute="top" constant="25" id="UQV-qB-dlr"/>
-                                    <constraint firstItem="w81-9W-U6G" firstAttribute="centerX" secondItem="mwW-eW-V59" secondAttribute="centerX" id="WPW-JB-0nF"/>
                                     <constraint firstItem="w81-9W-U6G" firstAttribute="centerX" secondItem="HT2-x1-Vju" secondAttribute="centerX" id="dck-gy-xDt"/>
-                                    <constraint firstItem="mwW-eW-V59" firstAttribute="top" secondItem="w81-9W-U6G" secondAttribute="bottom" constant="33" id="dwd-0Y-mri"/>
                                     <constraint firstItem="sbu-JG-hbN" firstAttribute="centerX" secondItem="YuV-ks-YWL" secondAttribute="centerX" id="mHz-Mf-UHP"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="top" secondItem="YuV-ks-YWL" secondAttribute="top" constant="25" id="pCx-fH-RhQ"/>
                                     <constraint firstItem="WiB-Rl-D4I" firstAttribute="top" secondItem="YuV-ks-YWL" secondAttribute="top" constant="25" id="yD9-pk-vmq"/>
@@ -406,7 +411,6 @@
                     </view>
                     <connections>
                         <outlet property="imageDisplay" destination="sbu-JG-hbN" id="Wod-QW-Ncy"/>
-                        <outlet property="saveButton" destination="mwW-eW-V59" id="Qsg-Ye-GNj"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goBack" animates="NO" id="i5H-f2-qNd"/>
                         <segue destination="km5-dL-wqV" kind="presentation" identifier="wikiClick" id="1Oz-de-AFV"/>
                         <segue destination="hmW-SC-cYt" kind="show" identifier="styleToSaved" animates="NO" id="IrF-Sp-FHS"/>
@@ -739,9 +743,9 @@
         <image name="saveButton" width="31" height="37"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="i5H-f2-qNd"/>
-        <segue reference="odS-TM-fjh"/>
-        <segue reference="SQS-77-tns"/>
         <segue reference="IrF-Sp-FHS"/>
+        <segue reference="odS-TM-fjh"/>
+        <segue reference="i5H-f2-qNd"/>
+        <segue reference="SQS-77-tns"/>
     </inferredMetricsTieBreakers>
 </document>
