--- a/Archigram/Base.lproj/Main.storyboard
+++ b/Archigram/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -261,7 +261,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Period" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HT2-x1-Vju">
-                                        <rect key="frame" x="104" y="295" width="206" height="21"/>
+                                        <rect key="frame" x="21" y="299" width="370" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="eDb-dO-T6f"/>
                                         </constraints>
@@ -283,10 +283,10 @@
                                             <action selector="saveButton:" destination="zZz-CP-At3" eventType="touchUpInside" id="Uso-4J-Val"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceQ-no-LW5">
-                                        <rect key="frame" x="113" y="367" width="188" height="112"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceQ-no-LW5">
+                                        <rect key="frame" x="29" y="342" width="355" height="206"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -305,16 +305,16 @@
                                     <constraint firstAttribute="trailing" secondItem="mwW-eW-V59" secondAttribute="trailing" id="XRJ-yS-VcQ"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="top" secondItem="t6H-Q6-FNZ" secondAttribute="top" id="YzO-2p-6QC"/>
                                     <constraint firstItem="t6H-Q6-FNZ" firstAttribute="bottom" secondItem="WiB-Rl-D4I" secondAttribute="bottom" id="arN-xJ-GvI"/>
-                                    <constraint firstItem="HT2-x1-Vju" firstAttribute="top" secondItem="Hei-IL-r9M" secondAttribute="bottom" constant="12" id="b86-Fj-Zgh"/>
-                                    <constraint firstItem="HT2-x1-Vju" firstAttribute="centerX" secondItem="mwW-eW-V59" secondAttribute="centerX" id="bkk-IV-rFd"/>
+                                    <constraint firstItem="HT2-x1-Vju" firstAttribute="top" secondItem="Hei-IL-r9M" secondAttribute="bottom" constant="16" id="b86-Fj-Zgh"/>
+                                    <constraint firstItem="HT2-x1-Vju" firstAttribute="centerX" secondItem="mwW-eW-V59" secondAttribute="centerX" constant="-1" id="bkk-IV-rFd"/>
                                     <constraint firstItem="t6H-Q6-FNZ" firstAttribute="firstBaseline" secondItem="hSS-Xs-E6z" secondAttribute="firstBaseline" id="e8l-mY-FMP"/>
                                     <constraint firstItem="Hei-IL-r9M" firstAttribute="top" secondItem="sbu-JG-hbN" secondAttribute="bottom" constant="18" id="fuy-bD-ogg"/>
                                     <constraint firstItem="WiB-Rl-D4I" firstAttribute="trailing" secondItem="hSS-Xs-E6z" secondAttribute="trailing" id="gsh-cz-Wz0"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="top" secondItem="WiB-Rl-D4I" secondAttribute="top" id="lOS-59-fTD"/>
                                     <constraint firstItem="WiB-Rl-D4I" firstAttribute="top" secondItem="hSS-Xs-E6z" secondAttribute="top" id="ld7-GF-KaK"/>
-                                    <constraint firstItem="Hei-IL-r9M" firstAttribute="trailing" secondItem="HT2-x1-Vju" secondAttribute="trailing" id="nYt-bj-mSQ"/>
+                                    <constraint firstItem="Hei-IL-r9M" firstAttribute="trailing" secondItem="HT2-x1-Vju" secondAttribute="trailing" constant="-81" id="nYt-bj-mSQ"/>
                                     <constraint firstAttribute="bottom" secondItem="mwW-eW-V59" secondAttribute="bottom" id="orf-iM-bN6"/>
-                                    <constraint firstItem="Hei-IL-r9M" firstAttribute="leading" secondItem="HT2-x1-Vju" secondAttribute="leading" id="rGC-c8-7DK"/>
+                                    <constraint firstItem="Hei-IL-r9M" firstAttribute="leading" secondItem="HT2-x1-Vju" secondAttribute="leading" constant="83" id="rGC-c8-7DK"/>
                                     <constraint firstItem="mwW-eW-V59" firstAttribute="leading" secondItem="YuV-ks-YWL" secondAttribute="leading" id="reS-oZ-9T7"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="leading" secondItem="YuV-ks-YWL" secondAttribute="leading" constant="21" id="rgl-C1-GKV"/>
                                     <constraint firstItem="2rC-d4-DwP" firstAttribute="trailing" secondItem="t6H-Q6-FNZ" secondAttribute="trailing" id="tqG-Ea-3Cv"/>
@@ -399,7 +399,9 @@
                     </view>
                     <connections>
                         <outlet property="imageDisplay" destination="sbu-JG-hbN" id="jKh-nM-PnQ"/>
+                        <outlet property="nameDisplay" destination="Hei-IL-r9M" id="Suh-jA-ned"/>
                         <outlet property="tagDisplay" destination="ceQ-no-LW5" id="JPE-pA-Mow"/>
+                        <outlet property="timePeriodDisplay" destination="HT2-x1-Vju" id="jbH-P9-Hui"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goBack" animates="NO" id="i5H-f2-qNd"/>
                         <segue destination="km5-dL-wqV" kind="presentation" identifier="wikiClick" id="1Oz-de-AFV"/>
                         <segue destination="hmW-SC-cYt" kind="show" identifier="styleToSaved" animates="NO" id="IrF-Sp-FHS"/>
@@ -732,9 +734,9 @@
         <image name="saveButton" width="31" height="37"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="a46-VO-6rA"/>
         <segue reference="i5H-f2-qNd"/>
-        <segue reference="ZCJ-RS-4kr"/>
-        <segue reference="pmT-3f-g2T"/>
+        <segue reference="a46-VO-6rA"/>
+        <segue reference="IrF-Sp-FHS"/>
+        <segue reference="SQS-77-tns"/>
     </inferredMetricsTieBreakers>
 </document>
